--- a/mine/mine/mine.vcxproj
+++ b/mine/mine/mine.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{B333BA5A-4AFC-4408-9539-028F6EF75921}</ProjectGuid>
-    <RootNamespace>test</RootNamespace>
+    <ProjectGuid>{82CECDC9-504C-48EB-BA7B-1C5BCDD0245D}</ProjectGuid>
+    <RootNamespace>mine</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -64,7 +64,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\test%27\test%27\test.c" />
+    <ClCompile Include="test.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
